# VINS-Mono

./: .gitignore  euroc_eval.sh  oxford_eval.sh
config/euroc/: euroc_config.yaml
config/oxford/: oxford_config.yaml
cotracker_pkg/: CMakeLists.txt  package.xml
cotracker_pkg/config/: config.yaml
cotracker_pkg/launch/: cotracker.launch
cotracker_pkg/scripts/: cotracker_node.py  window_tracker.py
cotracker_pkg/srv/: cotracker.srv
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/launch/: feature_tracker.launch
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  utils.cpp
tap_pkg/: CMakeLists.txt  package.xml
tap_pkg/config/: config.yaml
tap_pkg/launch/: tap.launch
tap_pkg/scripts/: cotracker_window.py  tap_node.py  tapnext_tracker.py  trackon_tracker.py
tapnext_pkg/: CMakeLists.txt  package.xml
tapnext_pkg/config/: config.yaml
tapnext_pkg/launch/: tapnext.launch
tapnext_pkg/scripts/: tapnext_node.py  tapnext_tracker.py
tapnext_pkg/srv/: tapnext.srv
trackon_pkg/: CMakeLists.txt  package.xml
trackon_pkg/config/: config.yaml
trackon_pkg/launch/: trackon.launch
trackon_pkg/scripts/: load_checkpoint.py  trackon_node.py  window_tracker.py
vins_estimator/launch/: euroc.launch  euroc_cotracker.launch  euroc_cotracker_eval.launch  euroc_eval.launch  euroc_tapnext.launch  euroc_tapnext_eval.launch  euroc_trackon_eval.launch  eval.sh  oxford.launch  oxford_eval.launch
vins_estimator/src/: estimator.cpp
vins_estimator/src/initial/: initial_sfm.cpp  solve_5pts.cpp
