<?xml version="1.0"?>
<package>
  <name>feature_tracker</name>
  <version>0.0.0</version>
  <description>The feature_tracker package</description>

  <maintainer email="qintonguav@gmail.com">dvorak</maintainer>
  <license>TODO</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>camera_model</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tap_pkg</build_depend>

  <!-- Runtime dependencies -->
  <run_depend>roscpp</run_depend>
  <run_depend>camera_model</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>tap_pkg</run_depend>

  <!-- Export dependencies -->
  <export>
  </export>
</package>